fix many issues related to mobile tooltips - tooltips close when clicking on non cy targets - mobile specific tooltip position display rules - decrease delay of regular tooltips appearing due to both popovers and tooltip descriptions appearing on the same target at the same time - fix vh issues causing scrolling in the network views on ios

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,4 +1,2 @@
 #root {
-  height: 100vh;
-  width: 100vw;
 }
