--- a/src/styles/common/network.css
+++ b/src/styles/common/network.css
@@ -1,11 +1,9 @@
 .network {
-  @extend %flex-center;
-
   position: absolute;
   left: 0;
   top: 0;
-  width: 100vw;
-  height: 100vh;
+  right: 0;
+  bottom: 0;
 }
 
 @media (--small-width-viewport) {
@@ -28,4 +26,6 @@
   position: absolute;
   left: 0;
   top: 0;
+  right: 0;
+  bottom: 0;
 }
