--- a/src/styles/features/interactions.css
+++ b/src/styles/features/interactions.css
@@ -1,3 +1,10 @@
+.interactions {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
 .interactions-bar {
   position: absolute;
   top: 0;
